Correction in navbar
Overlapping problem of two div solved

--- a/style.css
+++ b/style.css
@@ -98,9 +98,6 @@ span {
 .profile {
     align-items: center;
 }
-.padding-navbar {
-    padding: 0 110px;
-}
 .margin-4-0-4-8 {
     margin: 4px 0 4px 8px;
 }
